--- a/javajam/music.html
+++ b/javajam/music.html
@@ -15,7 +15,7 @@
 <body>
     <div id="wrapper">
     <header>
-        <h1>JavaJam Coffee Bar Menu</h1>
+        <h1>JavaJam Coffee Bar Music</h1>
     </header>
     <nav>
             <a href="index.html">Home</a> &nbsp;
@@ -24,25 +24,20 @@
             <a href="jobs.html">Jobs</a> &nbsp;
     </nav>
     <main>
-        <img src="images/mugs.jpg" alt="coffee mugs" align="right" width="400" height="299">
-        <h2>Coffee at JavaJam</h2>
+        <h2>Music at JavaJam</h2>
         <p>
-            Indulge in our locally roasted free-trade coffee and enjoy the aroma, the smooth taste, the caffeine! Join our Mug Club and get a 10% discount on each cup of coffee you purchase &mdash; ask the barista for details.
+            The first Friday night each month at JavaJam is a special night. Join us from 8 pm to 11 pm for some music you won’t want to miss!
         </p>
-        <dl>
-            <dt><strong>Just Java</strong></dt>
-                <dd>Regular house blend, decaffeinated coffee, or flavor of the day.<br>
-                    Endless Cup $3.50<br>
-                </dd>
-            <dt><strong>Cafe au Lait</strong></dt>
-                <dd>House blended coffee infused into a smooth, steamed milk.<br>
-                    Single $4.00 Double $5.00<br>
-                </dd>
-            <dt><strong>Iced Cappuccino</strong></dt>
-                <dd>Sweetened espresso blended with icy-cold milk and served in a chilled glass.<br>
-                    Single $5.00 Double $6.50<br>
-                </dd>
-        </dl>
+        <h4>January</h4>
+        <div class="details">
+            <a href="images/melanie.jpg"><img src="images/melaniethumb.jpg" alt="Melanie" width="100" height="100"></a>
+            Melanie Morris entertains with her melodic folk style.
+        </div>
+        <h4>February</h4>
+        <div class="details">
+            <a href="images/greg.jpg"><img src="images/gregthumb.jpg" alt="Tahoe Greg" width="100" height="100"></a>
+            Tahoe Greg is back from his tour. New songs. New stories.
+        </div>
     </main>
     <footer>
         Copyright &copy; 2023 JavaJam Coffee Bar<br>
