--- a/javajam/index.html
+++ b/javajam/index.html
@@ -52,6 +52,13 @@
     <footer>
         Copyright &copy; 2023 JavaJam Coffee Bar<br>
         <a href = "mailto:megan@christensen.com">megan@christensen.com</a>
+        <div>
+            
+            <!-- JavaScript Date Page Updated -->
+            <p id="dateupdate"></p>
+            <script src="js/dateupdate.js"></script>
+        
+        </div>
     </footer>
     </div>
 </body>
