--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                         aria-hidden="true"></i></a></li>
             <li><a href="mailto:Anumber@usu.edu" aria-label="email"><i class="fas fa-envelope-square"
                         aria-hidden="true"></i></a></li>
+            <div>
+                <p id="dateupdate"></p><script src="jn/dateupdate.js"></script> 
+            </div>
         </ul>
     </footer>
 
