--- a/javajam/menu.html
+++ b/javajam/menu.html
@@ -16,6 +16,8 @@
     <div id="wrapper">
     <header>
         <h1><a href="index.html">JavaJam Coffee Bar</a></h1>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+        <script src="js/common.js" ></script>
     </header>
     <nav>
         <ul>
@@ -29,7 +31,7 @@
         <div id="heromugs"></div>
         <h2>Coffee at JavaJam</h2>
         <p>
-            Indulge in our locally roasted free-trade coffee and enjoy the aroma, the smooth taste, the caffeine! Join our Mug Club and get a 10% discount on each cup of coffee you purchase &mdash; ask the barista for details.
+            Indulge in our locally roasted free-trade coffee and enjoy the aroma, the smooth taste, the caffeine! Join our <a id="mug" href="#">Mug Club</a> and get a 10% discount on each cup of coffee you purchase &mdash; ask the barista for details.
         </p>
         <div id="flow">
             <table>
@@ -57,6 +59,13 @@
     <footer>
         Copyright &copy; 2023 JavaJam Coffee Bar<br>
         <a href = "mailto:megan@christensen.com">megan@christensen.com</a>
+        <div>
+           
+            <!-- JavaScript Date Page Updated -->
+            <p id="dateupdate"></p>
+            <script src="js/dateupdate.js"></script>
+       
+        </div>
     </footer>
     </div>
 </body>
