--- a/javajam/jobs.html
+++ b/javajam/jobs.html
@@ -22,7 +22,8 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="menu.html">Menu</a></li>
             <li><a href="music.html">Music</a></li>
-            <li><a href="jobs.html">Jobs</a></li>
+            <li><a class="current" href="jobs.html">&#124; Jobs</a></li>
+            <li><a href="gear.html">Gear</a></li>
         </ul>
     </nav>
     <main>
