--- a/project/about.html
+++ b/project/about.html
@@ -10,12 +10,24 @@
   <meta name="description" content="Megan Christensen's Personal Portfolio">
   <meta name="keywords" content="student, utah state university, web design, web design student, freelance web developer, student web developer, web developer intern, front-end developer">
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3BFRK40EHJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3BFRK40EHJ');
+  </script>
+
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -54,7 +66,7 @@
         <a href="https://www.facebook.com/megan.christensen.1088/" class="facebook" target="_blank"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/megan.c.01/" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
         <form id="form" role="search" method="get" action= "https://www.google.com/search" target="_blank"> 
-          <input type="search" id="query" placeholder="Search Google" aria‐label="Search"
+          <input type="search" id="query" placeholder="Search Google"
           name="q">
           <button id="btnsearch">Search</button>
         </form>
@@ -117,7 +129,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Please view my resume in the navigation bar to see my other skils.</p>
+          <p>Additional skills are listed in my resume.</p>
         </div>
 
         <div class="row skills-content">
@@ -258,7 +270,7 @@
         &copy; Copyright <strong><span>Kelly</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/" target = "blank">BootstrapMade</a>
 
         <!-- JavaScript Date Page Updated -->
         <p id="dateupdate"></p>
