--- a/project/about.html
+++ b/project/about.html
@@ -84,7 +84,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hi, I'm Megan! I am currently a student at Utah State University and am excited for any opportunity where I can build my web developer skill set. I love to travel and explore the world and learning about all the amazing people and cultures. My favorite part of traveling is the beautiful and unique architecture that adorns cities.</p>
+          <p>Hi, I'm Megan! I am currently a student at Utah State University and am excited for any opportunity where I can build my web developer skill set. I love to travel and explore the world and learn about all the amazing people and cultures. My favorite part of traveling is the beautiful and unique architecture that adorns cities.</p>
         </div>
 
         <div class="row">
@@ -101,7 +101,7 @@
                 <ul>
                   <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 22</li>                  
                   <li><i class="bi bi-rounded-right"></i> <strong>Phone:</strong> 435 &#183; 213 &#183; 6851</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> Logan : Utah, USA</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> Logan, Utah, USA</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> megan.christensen01@gmail.com</li>
                 </ul>
               </div>
