--- a/project/contact.html
+++ b/project/contact.html
@@ -55,7 +55,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a class="active" href="contact.html">Contact</a></li>
-          <li><a href="resume.pdf" target="_blank">Resume</a></li>
+          <li><a href="resume1.pdf" target="_blank">Resume</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -64,7 +64,7 @@
         <a href="https://www.linkedin.com/in/meganchristensen123/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
         <a href="mailto:megan.christensen01@gmail.com" class="email"><i class="bi bi-envelope"></i></a>
         <a href="https://www.facebook.com/megan.christensen.1088/" class="facebook" target="_blank"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/megan.c.01/" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.instagram.com/megan.c.hristensen/" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
         <form id="form" role="search" method="get" action= "https://www.google.com/search" target="_blank"> 
           <input type="search" id="query" placeholder="Search Google"
           name="q">
@@ -126,9 +126,6 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Kelly</span></strong>. All Rights Reserved
-      </div>
       <div class="credits">
         Designed by <a href="https://bootstrapmade.com/" target = "blank">BootstrapMade</a>
 
