--- a/project/index.html
+++ b/project/index.html
@@ -56,7 +56,7 @@
           <li><a class="active" href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="resume.pdf" target="_blank">Resume</a></li>
+          <li><a href="resume1.pdf" target="_blank">Resume</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -65,7 +65,7 @@
         <a href="https://www.linkedin.com/in/meganchristensen123/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
         <a href="mailto:megan.christensen01@gmail.com" class="email"><i class="bi bi-envelope"></i></a>
         <a href="https://www.facebook.com/megan.christensen.1088/" class="facebook" target="_blank"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/megan.c.01/" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.instagram.com/megan.c.hristensen/" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
         <form id="form" role="search" method="get" action= "https://www.google.com/search" target="_blank"> 
         <input type="search" id="query" placeholder="Search Google"
           name="q">
@@ -80,7 +80,7 @@
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
       <h1>Megan Christensen</h1>
       <h2>Student at Utah State University 	&#124; Information Systems</h2>
-      <h2>Web Development Emphasis</h2>
+      <h2>Web Development</h2>
       <a href="about.html" class="btn-about">About Me</a>
     </div>
   </section><!-- End Hero -->
@@ -88,9 +88,6 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Kelly</span></strong>. All Rights Reserved
-      </div>
       <div class="credits">
         Designed by <a href="https://bootstrapmade.com/" target = "blank">BootstrapMade</a>
       
@@ -117,8 +114,8 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
-  <!-- Welcome Alert -->
-  <script src="assets/js/welcome.js"></script>
+  <!-- Welcome Alert
+  <script src="assets/js/welcome.js"></script> -->
 
 </body>
 
