--- a/project/about.html
+++ b/project/about.html
@@ -55,7 +55,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a class="active" href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="resume.pdf" target="_blank">Resume</a></li>
+          <li><a href="resume1.pdf" target="_blank">Resume</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -64,7 +64,7 @@
         <a href="https://www.linkedin.com/in/meganchristensen123/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
         <a href="mailto:megan.christensen01@gmail.com" class="email"><i class="bi bi-envelope"></i></a>
         <a href="https://www.facebook.com/megan.christensen.1088/" class="facebook" target="_blank"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/megan.c.01/" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.instagram.com/megan.c.hristensen/" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
         <form id="form" role="search" method="get" action= "https://www.google.com/search" target="_blank"> 
           <input type="search" id="query" placeholder="Search Google"
           name="q">
@@ -84,7 +84,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hi, I'm Megan! I am currently a student at Utah State University and am excited for any opportunity where I can build my web developer skill set. I love to travel and explore the world and learn about all the amazing people and cultures. My favorite part of traveling is the beautiful and unique architecture that adorns cities.</p>
+          <p>Hi, I'm Megan! I am currently a student at Utah State University and am excited for any opportunity where I can build my web developer skill set. I love to travel and explore the world and learn about all the amazing people and cultures. My favorite part of traveling is seeing all the beautiful and unique architecture.</p>
         </div>
 
         <div class="row">
@@ -98,8 +98,7 @@
             </p>
             <div class="row">
               <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 22</li>                  
+                <ul>                 
                   <li><i class="bi bi-rounded-right"></i> <strong>Phone:</strong> 435 &#183; 213 &#183; 6851</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> Logan, Utah, USA</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> megan.christensen01@gmail.com</li>
@@ -109,6 +108,7 @@
                 <ul>
                   <li><i class="bi bi-rounded-right"></i> <strong>Degree:</strong> Undergraduate</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Major:</strong> Information Systems</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Minor:</strong> Data Analytics</li> 
                   <li><i class="bi bi-rounded-right"></i> <strong>Freelance:</strong> Available</li>             
                 </ul>
               </div>
@@ -137,23 +137,23 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Canva <i class="val">100%</i></span>
+              <span class="skill">HTML <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">65%</i></span>
+              <span class="skill">CSS <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">65%</i></span>
+              <span class="skill">React <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -169,14 +169,14 @@
             </div>
 
             <div class="progress">
-              <span class="skill">SQL <i class="val">40%</i></span>
+              <span class="skill">SQL <i class="val">65%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Illistrator <i class="val">45%</i></span>
+              <span class="skill">Python <i class="val">45%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -266,9 +266,6 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Kelly</span></strong>. All Rights Reserved
-      </div>
       <div class="credits">
         Designed by <a href="https://bootstrapmade.com/" target = "blank">BootstrapMade</a>
 
