Added IS3600 project in main nav

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li class="current"><a href="index.html">Home</a></li>
             <li><a href="javajam/index.html">Java Jam</a></li>
             <li><a href="project/index.html">Project</a></li>
+            <li><a href="bus3600final/index.html">IS 3600 Final Project</a></li>
             <!-- Add more navigation items as needed- possibly projects from different courses -->
         </ul>
     </nav>
@@ -30,6 +31,7 @@
         <h2>IS 3700 &mdash; UI/UX Web Design</h2>
         <h3><a href="javajam/index.html">Java Jam Coffee Bar Homework</a></h3>
         <h3><a href="project/index.html">Course Project</a></h3>
+        <h3><a href="bus3600final/index.html">IS 3600 Final Project</a></h3>
     </main>
 
     <footer id="pageFooter">
